--- a/gucunluo.html
+++ b/gucunluo.html
@@ -224,7 +224,7 @@ background-attachment: fixed;
     </script>
     <script src="./js/about.js"></script>
     <div id="sticky-banner" class="sticky-banner">
-        <p>&copy; 2023 实践队伍。版权所有。</p >
+        <p>&copy; 2024 青瓦新生。版权所有。</p >
     </div>
     </body>
 </html>
