--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body {
             <li><a href="more.html">了解更多</a></li>
     </section>
     <div id="sticky-banner" class="sticky-banner">
-      <p>&copy; 2023 实践队伍。版权所有。</p >
+      <p>&copy; 2024 青瓦新生。版权所有。</p >
   </div>
    <!-- 返回顶部按钮 -->
    <a href="" class="back-to-top" id="back-to-top" title="返回顶部">回到顶部↑</a>
