--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
         </section>
     </main>
     <div id="sticky-banner" class="sticky-banner">
-        <p>&copy; 2023 实践队伍。版权所有。</p >
+        <p>&copy; 2024 青瓦新生。版权所有。</p >
     </div>
 </body>
 <script src="js\about.js"></script>
