--- a/renwenguan.html
+++ b/renwenguan.html
@@ -141,7 +141,7 @@ body {
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/3.9.1/ScrollTrigger.min.js"></script>
     <div id="sticky-banner" class="sticky-banner">
-      <p>&copy; 2023 实践队伍。版权所有。</p >
+      <p>&copy; 2024 青瓦新生。版权所有。</p >
 </div>
  <!-- 返回顶部按钮 -->
  <a href="" class="back-to-top" id="back-to-top" title="返回顶部">回到顶部↑</a>
