--- a/wenchuangguan.html
+++ b/wenchuangguan.html
@@ -53,7 +53,7 @@ body {
     </div>
     
     <div id="sticky-banner" class="sticky-banner">
-        <p>&copy; 2023 实践队伍。版权所有。</p >
+        <p>&copy;2024 青瓦新生。版权所有。</p >
     </div>
 </body> 
 <script src="js/wenchuang"></script>
