--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@ body {
             <img src="zzhuye\微信图片_20240809110700.jpg" alt="Image 3">
           </div>
           <div class="carousel-item">
-            <img src="zzhuye\微信图片_20240809111031.jpg" alt="Image 4">
+            <img src="zzhuye\照片31.jpg" alt="Image 4">
           </div>
           <div class="carousel-item">
-            <img src="zzhuye\图片3.jpg" alt="Image 5">
+            <img src="zzhuye\照片32.jpg" alt="Image 5">
           </div>
           <div class="carousel-item">
-            <img src="zzhuye\图片4.jpg" alt="Image 6">
+            <img src="zzhuye\照片33.png" alt="Image 6">
           </div>
           <div class="carousel-item">
-            <img src="zzhuye\图片7.jpg" alt="Image 7">
+            <img src="zzhuye\照片34.png" alt="Image 7">
           </div>
           <div class="carousel-controls">
               <div class="carousel-indicators">
