--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body {
                     <p>3.参观汇青州精华于一体的青州博物馆，揭开历史的面纱，感受悠久青州文明。</p >
         </div>
         <div class="feature-item">
-            <h3>王辇村</h3>
+            <h3>王家辇村</h3>
             <img src="zzhuye\微信图片_20240809111749.jpg" alt="Feature 3">
             
             <p>1.参观稷下书房，查阅珍贵资料，为后续工作提供扎实的基础。</p >
@@ -152,7 +152,7 @@ body {
         </div>
         <div class="project-item">
             <img src="hezhao\微信图片_20240809112238.jpg" alt="Project 2">
-            <h3>在王辇村的合影</h3>
+            <h3>在王家辇村的合影</h3>
             <p>实践队员集结后，分批前往王家辇村，全员抵达，并与村委会干部确认流程，队员们首先参观了王家辇村稷下书房，认真查阅青州镇村志及王家辇村人大代表活动纪录等资料，随后跟随稷下书房工作人员游览早期村落遗址，在讲解中参观了“天下第一算盘”“桓公饮马泉”“太白石”等景观，感受当地特色民风民俗，紧接着对村委会干部及村民进行访谈，掌握当地数字化建档情况及面临的困难，明晰已实施的数字化发展措施，知悉村民对村落文化发展的期望，在村委会干部引领下参观村史馆，深入了解王家辇村的历史发展进程，探究历史名人与村子的关联，通过参观村史馆，队员们对王家辇村的发展有了更全面、更深入的认识。</p >
         </div>
     </div>
