--- a/gucunluo.html
+++ b/gucunluo.html
@@ -36,7 +36,7 @@ background-attachment: fixed;
                     <ul class="droplist">
                        <li><a href="">井塘古村</a></li>
                        <li><a href="#village2">上院村</a></li>
-                       <li><a href="#village3">王辇村</a></li>
+                       <li><a href="#village3">王家辇村</a></li>
                     </ul>
                 </li>
 
@@ -124,7 +124,7 @@ background-attachment: fixed;
   <!-- 其他古村落内容按类似结构增加 -->
   <section id="village3" class="village-section" data-aos="fade-up">
   <div class="intro-container">
-      <h2>王辇村</h2>
+      <h2>王家辇村</h2>
       <p>王辇村位于山东省潍坊市坊子区，是一个历史悠久且充满生机的村庄。村庄依山傍水，环境优美，四季分明，展现了典型的北方农村风貌。这里的村民世代务农，淳朴善良，形成了团结互助、勤劳务实的村庄精神</p >
   </div>
 
@@ -138,7 +138,7 @@ background-attachment: fixed;
       <hr>
       <div class="gallery-item" data-aos="fade-left">
         <div class="gallery-description">
-            <p>王辇村在近年来的乡村建设中不断提升基础设施水平。通过道路硬化、建设村民活动中心和完善公共服务设施，村民的生活条件得到了极大的改善。同时，村里注重生态环境保护，推行垃圾分类、河道清理等措施，使村庄环境更加整洁美丽，提升了村民的生活质量。
+            <p>王家辇村在近年来的乡村建设中不断提升基础设施水平。通过道路硬化、建设村民活动中心和完善公共服务设施，村民的生活条件得到了极大的改善。同时，村里注重生态环境保护，推行垃圾分类、河道清理等措施，使村庄环境更加整洁美丽，提升了村民的生活质量。
             </p >
         </div>
         <img src="zhaopian1\微信图片_20240815081513.jpg" alt="古村落照片2">
