--- a/jianzhuguan.html
+++ b/jianzhuguan.html
@@ -48,7 +48,7 @@ body {
             <button onclick="showSection('all')">全部</button>
             <button onclick="showSection('jingtang')">井塘古村</button>
             <button onclick="showSection('shangyuan')">上院村</button>
-            <button onclick="showSection('wangnian')">王辇村</button>
+            <button onclick="showSection('wangnian')">王家辇村</button>
         </div>
 
         <!-- 全部部分 -->
@@ -200,9 +200,9 @@ body {
             </div>
         </div>
 
-        <!-- 王辇村部分 -->
+        <!-- 王家辇村部分 -->
         <div id="wangnian" class="section">
-            <h3>王辇村</h3>
+            <h3>王家辇村</h3>
             <div class="grid-container">
                 <div class="grid-item">
                     <img src="pictures\图片24.jpg" alt="建筑1">
