--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
             <img src="zzhuye\微信图片_20240809110447.jpg" alt="Image 1">
           </div>
           <div class="carousel-item">
-            <img src="https://cdn.jsdelivr.net/gh/honey-yun/qingwaxinsheng@main/zzhuye/微信图片_20240809110542.jpg" alt="Image 2">
+            <img src="zzhuye\微信图片_20240809110542.jpg" alt="Image 2">
           </div>
           <div class="carousel-item">
             <img src="zzhuye\微信图片_20240809110700.jpg" alt="Image 3">
