--- a/gucunluo.html
+++ b/gucunluo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -56,8 +56,6 @@ background-attachment: fixed;
       <section id="village1" class="village-section" data-aos="fade-up">
           <div class="intro-container">
               <h2>井塘古村</h2>
-              <p>井塘古村历史悠久，明代建筑风貌独特，石墙石屋古朴沧桑，山水相依，古树参天，民俗文化浓郁，是寻古探幽的好去处。
-               </p >
           </div>
   
           <div class="gallery">
@@ -65,13 +63,13 @@ background-attachment: fixed;
               <img src="pictures\图片1.jpg" alt="古村落照片1">
               <img src="pictures\图片2.jpg" alt="古村落照片2">
                   <div class="gallery-description">
-                      <p>古树繁茂，枝干苍劲，湖泊清澈，微风拂过，波光荡漾，尽显自然之美，这是独属井塘古村的美</p >
+                      <p>井塘古村历史悠久，明代建筑风貌独特，石墙石屋古朴沧桑，山水相依，古树参天，民俗文化浓郁 ，这里，石屋依山而建，古朴的墙壁铭记着先辈们的辛勤；这里，溪流清澈见底，欢快的水花讲述着四季的更替；这里，梯田层层叠叠，金黄的麦浪展现着大地的馈赠；这里，古桥横跨溪流，斑驳的桥身见证着岁月的流转。每一处风景，都饱含着古村的韵味。踏入这片土地，仿佛置身于一幅宁静而美丽的历史画卷之中，让人沉醉，难以忘怀。</p >
                   </div>
               </div>
               <hr>
               <div class="gallery-item" data-aos="fade-left">
                 <div class="gallery-description">
-                    <p>古树繁茂，枝干苍劲，湖泊清澈，微风拂过，波光荡漾，尽显自然之美，这是独属井塘古村的美。</p >
+                    <p> 古树繁茂，枝干苍劲，湖泊清澈，微风拂过，波光荡漾，尽显自然之美，这是独属井塘古村的美 ，这里，石屋石墙紧密相依，古朴的纹理诉说着岁月的悠长；这里，飞檐斗拱精致典雅，展现着工匠的巧思妙手。这里，青山连绵起伏，葱郁的树木似翠色的波涛；这里，绿水蜿蜒环绕，清澈的溪流如灵动的丝带。山峰的雄伟与建筑的沉稳相互映衬，水的柔情与石的坚毅完美融合。古村在山水间静谧矗立，仿佛在向世人诉说着它与自然和谐共生的千年故事。</p >
                 </div>
                 <img src="pictures/图片3.jpg" alt="古村落照片3">
                 <img src="pictures\图片4.jpg" alt="古村落照片4">
