--- a/jianzhuguan.html
+++ b/jianzhuguan.html
@@ -43,7 +43,7 @@ body {
           </div>
     </header>
     <section class="architecture-gallery">
-        <h2>建筑照片展示</h2>
+        <h2>云上建筑展</h2>
         <div class="buttons">
             <button onclick="showSection('all')">全部</button>
             <button onclick="showSection('jingtang')">井塘古村</button>
