--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
       <div class="project-item">
           <img src="hezhao\微信图片_20240809112308.jpg" alt="Project 2">
           <h3>在井塘古村的合影</h3>
-          <p>在青州市井塘古村的实践中我们团队了解到，现下古村落保护与修缮已经逐渐得到了重视。数字技术具有高度还原性和永久保存性，可以在精准记录数据的举出上，将村落格局及建筑不同时期的变化记录下来，不再是静态的保护方式和措施，是鲜活的、立体的。是在现下传统保护古村落的基础上，更现代化、科学化、长久化的古村落保护方式。</p >
+          <p>在青州市井塘古村的实践中我们团队了解到，现下古村落保护与修缮已经逐渐得到了重视。数字技术具有高度还原性和永久保存性，可以在精准记录数据的输出上，将村落格局及建筑不同时期的变化记录下来，不再是静态的保护方式和措施，是鲜活的、立体的。是在现下传统保护古村落的基础上，更现代化、科学化、长久化的古村落保护方式。</p >
       </div>
   </div>
 </section>
@@ -162,15 +162,33 @@ body {
         <div class="project-item">
             <img src="hezhao\微信图片_20240809112311.jpg" alt="Project 1">
             <h3>在青州博物馆前的合影</h3>
-            <p> 在青州博物馆，队员们参观了博物馆一层的青州古代石刻文化陈列展区，参观了博物馆二层的青州历史陈列（一）（二）展厅，在博物馆三层，参观了书画、瓷器及标本陈列、衡王府历史陈列等展厅，并且参观了博物馆四层的青州龙兴寺遗址出土佛教造像艺术陈列展厅，最后队员们还参观了博物馆的青州各文创区，千年文物齐聚，青州博物馆令人震撼！</p >
+            <p>踏入青州博物馆，一层的古代石刻文化陈列展区透露古朴浑厚，二层的历史陈列(一)(二)展厅折射激荡风云，三层的书画、瓷器及标本陈列、衡王府历史陈列等展厅光辉熠熠，四层的龙兴寺遗址出土佛教造像艺术陈列展厅博大精深……最后，队员们还参观了博物馆的青州各文创区，这里汇聚了千年的文物和创意，让人仿佛穿越时空，与古人进行了一场跨越千年的对话。令队员们流连忘返，心潮澎湃。</p >
         </div>
     </div>
 </section>
     <section id="welcome-section" class="content-section">
         <h2>欢迎来到我们的实践队伍！</h2>
         <p>加入我们一起创造未来！</p >
+         <h2>鸣谢：</h2>
             <li><a href="more.html">了解更多</a></li>
     </section>
+    <section class="about">
+        <h2>关于我们联系方式</h2>
+        <p></p >
+        <div class="contact-info">
+           <div class="contact-item">
+               <p><strong>邮箱:</strong>xxx</p >
+              </div>
+          <div class="contact-item">
+           <!-- 照片省略<img src="photos\微信图片_20240814201837.jpg" alt="WeChat" class="zoomable"> -->
+           <p><strong>微信:</strong> xxxx</p >
+          </div>
+          <div class="contact-item">
+           <!-- 照片省略<img src="photos\微信图片_20240814201837.jpg" alt="QQ" class="zoomable"> -->
+           <p><strong>QQ:</strong>xxx</p >
+          </div>
+        </div>
+           </section>
     <div id="sticky-banner" class="sticky-banner">
       <p>&copy; 2024 青瓦新生。版权所有。</p >
   </div>
