--- a/chengyuan.html
+++ b/chengyuan.html
@@ -55,6 +55,17 @@
             </ul>
         </div>
     </header>
+      
+       <!-- 总介绍 -->
+       <section class="about">
+     
+        <div class="contact-info">
+           <div class="contact-item">
+               <p><strong>为全面贯彻学习2024年中央一号文件提出的“加强乡村优秀传统文化保护传承和创新发展，开展传统村落集中连片保护利用示范，繁荣发展乡村文化”，烟台大学经济管理学院青瓦新生社会实践队走进山东省青州市，针对当前传统村落不断消亡，“千村一面”愈发严重的问题，展开实践活动，着力链接传统村落和数字技术，对鲁中地区古村落数字化建档与开发的可行性进行研究，积极为乡村文化振兴贡献力量。</strong></p >
+              </div>
+        </div>
+           </section>
+
     <section id="section1">
     <div class="team-member">
             <h3 class="member-name">队长</h3>
