--- a/wenchuangguan.html
+++ b/wenchuangguan.html
@@ -51,7 +51,16 @@ body {
   
         <!-- 添加更多卡片 -->
     </div>
-    
+     <section class="about">
+        <h2>青州吉祥物：</h2>
+        <div class="contact-info">
+           <div class="contact-item">
+               <p><strong>峱（náo）宝宝，齐鲁瑞兽，发如麒麟火，双眉似水波，眉心点福禄，周身青蓝色。身型矫健，手执卷轴，身后有翅，尾似祥云，可御风飞行，能招财纳福，辟邪匡正。
+                 “峱”字始见于中国古代最早的诗歌总集《诗经·齐风·还》，仅用于山东青州的“峱”、“峱山”。春秋时期，齐桓公好围猎，曾在峱山遇到瑞兽“峱”，此后任人唯贤，励精图治，成就霸业。至今还流传着齐桓公峱山“礼贤下士纳宁戚”的佳话。    
+                峱宝宝源于史书记载和民间传说，厚植于中华民族深厚的传统文化，洋溢着新时代精神，凝结了人们对美好生活的向往和对祖国繁荣昌盛的祈愿。</strong></p >
+              </div>
+        </div>
+     </section>
     <div id="sticky-banner" class="sticky-banner">
         <p>&copy;2024 青瓦新生。版权所有。</p >
     </div>
