--- a/renwenguan.html
+++ b/renwenguan.html
@@ -65,13 +65,13 @@ body {
                     </div>
                 </div>
                 <div class="transcript">
-                    <h2>采访一 文字稿</h2>
-                    <p>王：您这次回到青州感觉有什么变化吗？</p>
-                    <p>答：好多变化啊，生活好了，风景好了，环境好了，漂亮了。游客也多了，玩的地方也多了。山美，水美，人更美啊。发展的很快。</p>
-                    <p>王：那您对青州未来发展有什么期望？</p>
-                    <p>答：哎，已经很好了。青州是最好的。</p>
-                    <p>周：那会觉得我们现在这种手机、科技的发展变化很大吗？</p>
-                    <p>答：我70多岁的老太太都用上了，太好了，没想到能看到今天。</p >
+                    <h2>采访一 文字稿</h2>
+                    <p><strong>王：</strong>您这次回到青州感觉有什么变化吗？</p >
+                    <p><strong>答：</strong>好多变化啊，生活好了，风景好了，环境好了，漂亮了。游客也多了，玩的地方也多了。山美，水美，人更美啊。发展的很快。</p >
+                    <p><strong>王：</strong>那您对青州未来发展有什么期望？</p >
+                    <p><strong>答：</strong>哎，已经很好了。青州是最好的。</p >
+                    <p><strong>周：</strong>那会觉得我们现在这种手机、科技的发展变化很大吗？</p >
+                    <p><strong>答：</strong>我70多岁的老太太都用上了，太好了，没想到能看到今天。</p >
                 </div>
                 <div class="history" data-aos="fade-up">
                     <h3>历史介绍</h3>
@@ -102,13 +102,13 @@ body {
                         <img src="zhaopian1\微信图片_20240815075225.jpg" alt="采访照片2">
                     </div>
                 </div>
-                <div class="transcript">
-                    <h2>采访二 文字稿</h2>
-                    <p>采访者：您在这儿居住有没有感受到这些年来村里的变化呢？</p>
-                       <p>被采访者：变化的很快，原先58年60年就是开始建设，那上面突然冒出十几个杆啊，看还看不到头呢，因为道都是是小推车推车来的，我在这推车，这个大坝也是俺在这推车推出来的，原先一到有沟的地方，一到沟岭就没有那么多房子，你看眼前这些房子都是老房子，都是石头堆起来的，这不一改革嘛，一说对象人家一听是这样的都不愿意，所以我们就都改成了砖，不过我还住着老房子。</p> 
-                        <p>采访者：那您有没有什么当地特色的东西可以推荐呢？</p>
-                       <p>被采访者：我们这里有个特色形象叫峱</p >
-                </div>
+                 <div class="transcript">
+                    <h2>采访二 文字稿</h2>
+                    <p><strong>采访者：</strong>您在这儿居住有没有感受到这些年来村里的变化呢？</p >
+                       <p><strong>被采访者：</strong>变化的很快，原先58年60年就是开始建设，那上面突然冒出十几个杆啊，看还看不到头呢，因为道都是是小推车推车来的，我在这推车，这个大坝也是俺在这推车推出来的，原先一到有沟的地方，一到沟岭就没有那么多房子，你看眼前这些房子都是老房子，都是石头堆起来的，这不一改革嘛，一说对象人家一听是这样的都不愿意，所以我们就都改成了砖，不过我还住着老房子。</p > 
+                        <p><strong>采访者：</strong>那您有没有什么当地特色的东西可以推荐呢？</p >
+                       <p><strong>被采访者：</strong>我们这里有个特色形象叫峱</p >
+                 </div>
                 <div class="more-info">
                     <a href="shipin.html" class="more-info-button">想要了解更多</a> 
                   </div>
@@ -124,9 +124,15 @@ body {
                         </video>
                     </div>
                 </div>
-                <div class="transcript">
-                    <h2>采访三</h2>
-                </div>
+                    <div class="transcript">
+                    <h2>采访三</h2>
+                    <p><strong>采访者：</strong>感觉我们村子文化建设方面做得非常好，我们作为管理者是怎么想到往这个方面发展的？既保护文化，又保护古村落</p >
+                       <p><strong>被采访者：</strong>我们这边文化产业就都是镇上帮忙，企业帮忙</p > 
+                        <p><strong>采访者：</strong>那您有了解过关于数字化这方面的内容吗？就是跟科技相关</p >
+                       <p><strong>被采访者：</strong>数字化？这个还确实没有了解过</p >
+                        <p><strong>采访者：</strong>那在开发建设村落的时候，有没有关于互联网这一类的案例？</p >
+                            <p><strong>被采访者：</strong>这个有啊，像我们的稷下书房，那边有我们镇上文化站的，就是像我们这边小米、地瓜、柿饼、蜜桃什么的，都在那边通过直播的方式推广。</p >
+                    </div>
                 <div class="more-info">
                     <a href="shipin.html" class="more-info-button">想要了解更多</a> 
                   </div>
